# food-facilities-challenge

./: .gitignore  Dockerfile  README.md  ingest_data.py  pyproject.toml  requirements.txt
data/: Mobile_Food_Facility_Permit_20250504.csv
src/: main.py
src/api/: foodtrucks.py
src/core/: config.py  database.py
src/data_access/: foodtruck_repository.py
src/models/: schemas.py
src/services/: foodtruck_service.py
src/utils/: geo.py
tests/: test_api.py  test_utils.py
ui/: index.html  script.js  style.css
