[project]
name = "food-facilities-challenge-backend"
version = "0.1.0"
description = "FastAPI backend and UI for SF food facility data."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Ashok" },
]


dependencies = [
  "fastapi>=0.111.0,<0.112.0",
  "uvicorn[standard]>=0.30.0,<0.31.0",
  "pandas>=2.0.0,<3.0.0",
  "geopy>=2.0.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "httpx>=0.20.0,<1.0.0",
  "coverage>=7.0.0,<8.0.0",
  "pytest-cov>=5.0.0,<6.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

